# ml-experiment-tracker

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_config.yaml  setup.py  test_cli.py
.github/workflows/: ci.yml
src/experiment_tracker/: __init__.py  cli.py
src/experiment_tracker/backends/: __init__.py  base.py  local_backend.py  mlflow_backend.py  wandb_backend.py
src/experiment_tracker/core/: __init__.py  config.py  run.py  tracker.py
src/experiment_tracker/reporters/: __init__.py
src/experiment_tracker/utils/: __init__.py  artifact_manager.py  auto_plotter.py  diff_generator.py  html_reporter.py
tests/: conftest.py  test_config.py  test_integration.py  test_run.py  test_tracker.py
